--- a/app/templates/main_page_module/base.html
+++ b/app/templates/main_page_module/base.html
@@ -7,15 +7,16 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <style>
 
+    </style>
     {% block extraheader %}
     {% endblock extraheader %}
 
-    <title>Title here</title>
+    <title>HDSearch CRIF</title>
   </head>
     
   <body>
-    
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <a class="navbar-brand" href="{{ url_for('main_page_module.index') }}">MAIN MENU</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,21 +29,36 @@
                     <li class="nav-item {% block nav_index %}{% endblock nav_index %}">
                         <a class="nav-link" href="{{ url_for('main_page_module.index') }}">Home </a>
                     </li>
+                    <li class="nav-item {% block nav_new_entry %}{% endblock nav_new_entry %}">
+                        <a class="nav-link" href="{{ url_for('main_page_module.new_entry') }}">New entry </a>
+                    </li>
+                    <li class="nav-item {% block nav_all_entry %}{% endblock nav_all_entry %}">
+                        <a class="nav-link" href="{{ url_for('main_page_module.all_entry') }}">View All Entries </a>
+                    </li>
+                    <li class="nav-item {% block nav_all_users %}{% endblock nav_all_users %}">
+                        <a class="nav-link" href="{{ url_for('main_page_module.all_users') }}">Users </a>
+                    </li>
                     
-                    {% block nav_login_out %}
-                    {% endblock nav_login_out %}
                 </ul>
-                <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                <ul class="navbar-nav ml-auto">
+                    {% if session['user_id'] %}
+                        <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main_page_module.logout') }}">Logout </a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('main_page_module.login') }}">Login </a>
+                        </li>
+                    {% endif %}
+                </ul>
+                
             </div>
         </nav>
 
     {% block flashes %}
     {% endblock %}
     
-    <div class="container">
+    <div class="container" style="background-color: rgb(255, 255, 255)">
         {% block content %}
         {% endblock %}
     </div>
@@ -50,7 +66,7 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
   </body>
