--- a/app/templates/main_page_module/base.html
+++ b/app/templates/main_page_module/base.html
@@ -13,7 +13,7 @@
     {% block extraheader %}
     {% endblock extraheader %}
 
-    <title>HDSearch CRIF</title>
+    <title>Multiple Model TemplateF</title>
   </head>
     
   <body>
